2010-04-23  Miguel de Icaza  <miguel@novell.com>

	* Worked to get a bunch of NSArray strongly typed.
	
	* appkit.cs: Added contributions from James Clancey to the
	NSTableView classes.
	
	* AppKit/Enums.cs: Contribution from James Clancey
	<james.clancey@gmail.com>


2010-03-06  Miguel de Icaza  <miguel@novell.com>

	* ObjCRuntime/*: Make this build by making the use of "IntPtr"
	uniform in the Messaging classes and its consumers.

2010-02-22  Miguel de Icaza  <miguel@novell.com>

	* appkit.cs: Added NSWindow, NSWindowController
