@@ -32,15 +32,9 @@ Audit consistency of Properties, in many cases I was not consistent with the
 IsOpaque vs Opaque and other similar properties.
 
 #import <AppKit/NSAccessibility.h>
-#import <AppKit/NSAnimationContext.h>
 #import <AppKit/NSAppleScriptExtensions.h>
 #import <AppKit/NSFontManager.h>
-#import <AppKit/NSFontPanel.h>
-#import <AppKit/NSCachedImageRep.h>
-#import <AppKit/NSCIImageRep.h>
-#import <AppKit/NSCustomImageRep.h>
 #import <AppKit/NSDocumentController.h>
-#import <AppKit/NSEPSImageRep.h>
 #import <AppKit/NSErrors.h>
 #import <AppKit/NSHelpManager.h>
 #import <AppKit/NSGradient.h>
@@ -59,17 +53,12 @@ IsOpaque vs Opaque and other similar properties.
 #import <AppKit/NSSlider.h>
 #import <AppKit/NSSliderCell.h>
 #import <AppKit/NSSpellProtocol.h>
-#import <AppKit/NSTextFieldCell.h>
 #import <AppKit/NSTokenField.h>
 #import <AppKit/NSTokenFieldCell.h>
 #import <AppKit/NSWorkspace.h>
 #import <AppKit/NSRunningApplication.h>
 #import <AppKit/NSComboBox.h>
 #import <AppKit/NSComboBoxCell.h>
-#import <AppKit/NSTableColumn.h>
-#import <AppKit/NSTableHeaderCell.h>
-#import <AppKit/NSTableHeaderView.h>
-#import <AppKit/NSTableView.h>
 #import <AppKit/NSOutlineView.h>
 #import <AppKit/NSAttributedString.h>
 #import <AppKit/NSLayoutManager.h>
